--- a/index.html
+++ b/index.html
@@ -1055,13 +1055,39 @@
 										<div class="team team_circle">
 											<div class="image_frame photo no_link scale-with-grid">
 												<div class="image_wrapper">
+													<img class="scale-with-grid" src="images/pi/user.webp" alt="img">
+												</div>
+											</div>
+											<div class="desc_wrapper">
+												<h4>Wang Tailong</h4>
+												<p class="subtitle">
+													Cryptocurrency and Web Developer
+												</p>
+												<hr class="hr_color">
+												<div class="links">
+													<a href="mailto:wang.t_l@hotmail.com" class="icon_bar icon_bar_small">
+														<span class="t"><i class="icon-mail"></i></span>
+														<span class="b"><i class="icon-mail"></i></span>
+													</a>
+													<a target="_blank" href="skype:live:wang.t_l" class="icon_bar icon_bar_small">
+														<span class="t"><i class="icon-skype"></i></span>
+														<span class="b"><i class="icon-skype"></i></span>
+													</a>
+												</div>
+											</div>
+										</div>
+									</div>
+									<div class="column mcb-column one-third column_our_team ">
+										<div class="team team_circle">
+											<div class="image_frame photo no_link scale-with-grid">
+												<div class="image_wrapper">
 													<img class="scale-with-grid" src="images/dapeng.jpg" alt="img">
 												</div>
 											</div>
 											<div class="desc_wrapper">
 												<h4>Wang Dapeng</h4>
 												<p class="subtitle">
-													Lead Developer
+													Mobile App & Game Developer
 												</p>
 												<hr class="hr_color">
 												<div class="links">
