--- a/cn.html
+++ b/cn.html
@@ -1117,18 +1117,18 @@
 												</div>
 											</div>
 											<div class="desc_wrapper">
-												<h4>王大鹏
+												<h4>Chan Lye
 												</h4>
 												<p class="subtitle">
 													应用和游戏开发人
 												</p>
 												<hr class="hr_color">
 												<div class="links">
-													<a href="mailto:dapeng313@hotmail.com" class="icon_bar icon_bar_small">
+													<a href="mailto:lye222@outlook.com" class="icon_bar icon_bar_small">
 														<span class="t"><i class="icon-mail"></i></span>
 														<span class="b"><i class="icon-mail"></i></span>
 													</a>
-													<a target="_blank" href="skype:dapeng313.wang" class="icon_bar icon_bar_small">
+													<a target="_blank" href="skype:live:lye222" class="icon_bar icon_bar_small">
 														<span class="t"><i class="icon-skype"></i></span>
 														<span class="b"><i class="icon-skype"></i></span>
 													</a>
@@ -1179,14 +1179,6 @@
 										</li>
 										<li style="width:25%">
 											<div class="client_wrapper">
-												<a target="_blank" href="#" title="Connet">
-													<div class="gs-wrapper"><img width="145" height="75" src="images/2.png" class="scale-with-grid wp-post-image" alt="">
-													</div>
-												</a>
-											</div>
-										</li>
-										<li style="width:25%">
-											<div class="client_wrapper">
 												<a target="_blank" href="https://pickcoinex.com/" title="PICKCOIN EXCHANGE">
 													<div class="gs-wrapper"><img width="145" height="75" src="images/3.png" class="scale-with-grid wp-post-image" alt="">
 													</div>
@@ -1201,12 +1193,28 @@
 												</a>
 											</div>
 										</li>
+										<li style="width:25%">
+											<div class="client_wrapper">
+												<a target="_blank" href="#" title="Connet">
+													<div class="gs-wrapper"><img width="145" height="75" src="images/2.png" class="scale-with-grid wp-post-image" alt="">
+													</div>
+												</a>
+											</div>
+										</li>
 									</ul>
 									<ul class="clients clearfix  clients_tiles">
 										<li style="width:25%">
 											<div class="client_wrapper">
 												<a target="_blank" href="https://fantasygold.io/" title="DFSCoin">
 													<div class="gs-wrapper"><img width="145" height="75" src="images/5.png" class="scale-with-grid wp-post-image" alt="">
+													</div>
+												</a>
+											</div>
+										</li>
+										<li style="width:25%">
+											<div class="client_wrapper">
+												<a target="_blank" href="https://safecoin.org" title="SafeCoin">
+													<div class="gs-wrapper"><img width="145" height="75" src="images/8.png" class="scale-with-grid wp-post-image" alt="">
 													</div>
 												</a>
 											</div>
